[project]
name = "py-threadpool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "YOSHITAKA", email = "yo4taka@mail.com" }
]
dependencies = [
    "boto3==1.37",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_threadpool"]
